[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.arrayvec]
workspace = true

[dependencies.barcodes_folder]
path = '../barcodes_folder'

[dependencies.fastq_set]
workspace = true

[dependencies.flate2]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.martian]
workspace = true

[dependencies.martian-derive]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ordered-float]
workspace = true

[dependencies.pyanyhow]
path = '../pyanyhow'

[dependencies.pyo3]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.slide_design]
path = '../slide_design'

[dependencies.strum_macros]
workspace = true

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'barcode'
publish = false
version = '0.1.0'
