[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.barcode]
path = '../barcode'

[dependencies.cr_types]
path = '../cr_types'

[dependencies.fastq_set]
optional = true
path = '../fastq_set'

[dependencies.fst]
optional = true
version = '0.4'

[dependencies.itertools]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.rayon]
optional = true
workspace = true

[dependencies.serde]
workspace = true

[features]
default = ['tenx_source_available']
tenx_internal = ['rayon', 'fst', 'fastq_set']
tenx_source_available = []

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'barcode_extensions'
publish = false
version = '0.1.0'
