[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.bazel_utils]
path = '../bazel_utils'

[dependencies.itertools]
workspace = true

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'barcodes_folder'
publish = false
version = '0.1.0'
