[dependencies]
bio = '1'
csv = '1'
rayon = '1'

[dependencies.amino]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.cr_types]
path = '../cr_types'

[dependencies.enclone_proto]
workspace = true

[dependencies.enclone_ranger]
workspace = true

[dependencies.io_utils]
workspace = true

[dependencies.martian]
workspace = true

[dependencies.martian-derive]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.perf_stats]
workspace = true

[dependencies.rust-htslib]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.string_utils]
workspace = true

[dependencies.vdj_ann]
workspace = true

[dependencies.vdj_ann_ref]
workspace = true

[dependencies.vdj_asm_utils]
path = '../vdj_asm_utils'

[dependencies.vdj_reference]
path = '../vdj_reference'

[dependencies.vector_utils]
workspace = true

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'clonotype_assigner'
publish = false
version = '0.1.0'

[package.metadata]
[package.metadata.cargo-machete]
ignored = ['metric', 'serde_json']
