[[bin]]
name = 'cr_ana'
test = false

[dependencies]
anyhow = '1'
itertools = '0.10'
log = '0.4'
ndarray = '>= 0.15'
ndarray-stats = '0.5'
noisy_float = '0.2'
num-traits = '0.2.16'
rayon = '1.7'

[dependencies.bhtsne]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.clap]
default-features = false
features = ['std', 'derive']
version = '3'

[dependencies.diff-exp]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.hclust]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.hdf5]
branch = 'conda_nov2021'
features = ['conda']
git = 'https://github.com/10XGenomics/hdf5-rust.git'

[dependencies.hdf5-io]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.intel-mkl-src]
default-features = false
features = ['download', 'mkl-static-lp64-seq']
version = '0.7'

[dependencies.leiden]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.martian]
branch = 'master'
git = 'https://github.com/martian-lang/martian-rust'

[dependencies.martian-derive]
branch = 'master'
git = 'https://github.com/martian-lang/martian-rust'

[dependencies.martian-filetypes]
branch = 'master'
git = 'https://github.com/martian-lang/martian-rust'

[dependencies.ndarray-npy]
default-features = false
version = '0.8.1'

[dependencies.scan-rs]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.scan-types]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.serde]
features = ['derive']
version = '1.0'

[dependencies.sprs]
default-features = false
features = ['multi_thread']
version = '0.11'

[dependencies.sqz]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.strum]
features = ['derive']
version = '>=0.23, <0.25'

[dependencies.umap-rs]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[lib]
test = false

[package]
authors = ['10x Genomics']
default-run = 'cr_ana'
edition = '2021'
name = 'cr_ana'
publish = false
version = '0.1.0'

[profile]
[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 1
lto = true

[profile.test]
opt-level = 3
