[dependencies]
bitflags = '2'
wyhash = '0.5'

[dependencies.barcode]
path = '../barcode'

[dependencies.rust-htslib]
workspace = true

[dependencies.shardio]
workspace = true

[dependencies.umi]
path = '../umi'

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'cr_bam'
publish = false
version = '0.1.0'
