[dependencies]
[dependencies.barcode]
path = '../barcode'

[dependencies.bitflags]
workspace = true

[dependencies.rust-htslib]
workspace = true

[dependencies.shardio]
workspace = true

[dependencies.umi]
path = '../umi'

[dependencies.wyhash]
workspace = true

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'cr_bam'
publish = false
version = '0.1.0'
