[dependencies]
[dependencies.barcode]
path = '../barcode'

[dependencies.bitflags]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.rust-htslib]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.shardio]
workspace = true

[dependencies.umi]
path = '../umi'

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'cr_bam'
publish = false
version = '0.1.0'
